--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ DOCKER_DB_PORT=3037
 DOCKER_DB_PANEL_PORT=8082
 # End Docker config
 
+L5_SWAGGER_APP='app'
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
